# cellsplit

./: .travis.yml  Cargo.toml  README.md
src/: actor.rs  collapse.rs  expand.rs  lib.rs  main.rs
src/tests/: mod.rs  script.m  script0.m  scripta1.m  scriptb2.m  scriptgen.m  scriptiftrue3.m
