[package]
name = "cellsplit"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

description = "Utility for dissecting MATLAB Cell Mode scripts"
homepage = "https://github.com/durka/cellsplit"
repository = "https://github.com/durka/cellsplit"
readme = "README.md"
license = "MIT"
keywords = ["matlab", "cell"]

[[bin]]
name = "cellsplit"
doc = false

[dependencies]
clap       = { version = "2.3.0", features = ["color"] }
error-chain            = "0.8"
unborrow               = "0.3"
slug                   = "0.1"

